--- a/src/app/components/tetris/tetris.component.html
+++ b/src/app/components/tetris/tetris.component.html
@@ -1,7 +1,7 @@
 <div class="relative w-screen h-screen flex flex-row justify-center items-center p-3">
   @if(tService.status() == GameStatus.Home ){
     <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-white">
-      <div class="   bg-white outline rounded  rounded flex flex-col justify-end p-5 gap-3">
+      <div class="   bg-white outline rounded  flex flex-col justify-end p-5 gap-3">
         <div class="w-full p-3 text-6xl  flex justify-center items-center text-red-400 silkscreen-bold shadow-text">Tetris</div>
         <div class="shadow-text silkscreen-bold relative w-full h-[50px] flex justify-start items-center"><p class="w-[40px] h-[40px] flex justify-center items-center  bg-black  text-white rounded text-3xl font-extrabold">A</p> <p class="absolute right-0 bottom-0 h-full flex justify-start items-center text-2xl font-bold">Left Move</p></div>
         <div class="shadow-text silkscreen-bold relative w-full h-[50px] flex justify-start items-center"><p class="w-[40px] h-[40px] flex justify-center items-center bg-black  text-white rounded text-3xl font-extrabold">D</p> <p class="absolute right-0 bottom-0 h-full flex justify-start items-center text-2xl font-bold">Right Move</p></div>
