--- a/src/app/tiles/socialmedia/socialmedia.component.html
+++ b/src/app/tiles/socialmedia/socialmedia.component.html
@@ -1,3 +1,3 @@
-<div class="w-full h-full rounded-2xl">
+<div class="w-full h-full rounded-2xl bg-white">
   <img (dblclick)="goToProfile()" class="w-full h-full scale-105" [src]="icon_link" alt="linkedin--v1"/>
 </div>
