--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -141,9 +141,9 @@
 
   </div>
 
-    <div class=" absolute  top-0 right-0 silkscreen-regular   text-xl shadow-text text-amber-50  px-2 ">
-      Welcome
-    </div>
+<!--    <p class=" absolute  typeAnimation typeTarget top-0 left-0 text-2xl s shadow-text text-white ">-->
+<!--      welcome-->
+<!--    </p>-->
 
 
 
