--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -184,3 +184,24 @@
 .shadow-text-sm {
   text-shadow:  rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 10px;
 }
+
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+
+
+}
+
+.typeTarget {
+  font-family: monospace;
+  width: 8ch;
+  text-wrap: nowrap;
+  overflow: hidden;
+}
+
+
+.typeAnimation {
+  animation: typing 1s steps(8) infinite alternate-reverse;
+}
